--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-<title>Welcome to the Gnet Portal</title>
+<title>Gnet Portal</title>
 </head>
 
 <body>
