--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
 (Public)</font></a></font></p>
 <p><font face="8514oem"><a href="https://gnet27.github.io/weather/">
 <font color="#FF0000">Weather Page</font></a></font></p>
-<p><font face="8514oem"><a href="https://gnet27.github.io/hangman/">
+<p><font face="8514oem"><a href="https://gnet27.github.io/graph/">
+<font color="#FF0000">Gnet Graph</font></a></font></p>
+  <p><font face="8514oem"><a href="https://gnet27.github.io/update/">
+<font color="#FF0000">Windows 10 update (fake)</font></a></font></p>
+  <p><font face="8514oem"><a href="https://gnet27.github.io/hangman/">
 <font color="#FF0000">Hangman</font></a></font></p>
 <p><font face="8514oem"><a href="https://gnet27.github.io/gravity.points/">
 <font color="#FF0000">Gravity Points</font></a></font></p>
